[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = {path = "./iron"}
alph = {path = "./alph"}
rand ={ version = "0.8"}
clap ={version = "4", features = ["derive"]}
log-tracing = {path = "../log-tracing"}