[package]
name = "alph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 ={ version = "1"}
serde_json = "1.0"
serde = { version = "1.0.126", features = ["derive"] }
hex = "0.4"
crypto-hash = "0.3.4"
num-bigint = "0.4.0"
log = "0.4"
env_logger = "0.11"